load("@kleaf//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")

ddk_module(
    name = "amlogic-crypto-dma",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_CRYPTO_DMA": {
            True: [
                "aml-dma.c",
                "aml-crypto-dma.c",
                "aml-aes-dma.c",
                "aml-sha-dma.c",
                "aml-crypto-device.c",
                "aml-sm4-dma.c",
                "aml-sha3-dma.c",
            ],
        },
        "CONFIG_CRYPTO_DES": {
            True: [
                "aml-tdes-dma.c",
            ],
        },
    },
    hdrs = ["//common_drivers:soc_headers"],
    local_defines = [
        "pr_fmt(fmt)=\"[crypto-dma]: \" fmt",
    ],
    out = "amlogic-crypto-dma.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
    ],
)
