load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")
load("//common_drivers:amlogic_utils.bzl", "m_k_files")

m_k_files()

amlogic_crypto_dma_deps0 = [
    "//common_drivers/drivers/gki_tool:amlogic-gkitool",
    "//common_drivers/drivers/debug:amlogic-debug-iotrace",
    "//common_drivers/drivers/debug:amlogic-debug",
]
amlogic_crypto_dma_deps = [i for i in amlogic_crypto_dma_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "amlogic-crypto-dma",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_CRYPTO_DMA": {
            True: [
                "aml-dma.c",
                "aml-crypto-dma.c",
                "aml-aes-dma.c",
                "aml-sha-dma.c",
                "aml-crypto-device.c",
                "aml-sm4-dma.c",
                "aml-sha3-dma.c",
            ],
        },
        "CONFIG_CRYPTO_DES": {
            True: [
                "aml-tdes-dma.c",
            ],
        },
    },
    hdrs = [
    ],
    local_defines = [
        "pr_fmt(fmt)=\"[crypto-dma]: \" fmt",
    ],
    out = "amlogic-crypto-dma.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = amlogic_crypto_dma_deps,
)
