load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select")

m_k_files()

ddk_module(
    name = "aml_drm",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_DRM": {
            True: [
                "meson_drm_main.c",
                "meson_drv.c",
                "meson_plane.c",
                "meson_atomic.c",
                "meson_sysfs.c",
                "meson_writeback.c",
                "meson_logo.c",
                "meson_async_atomic.c",
                "meson_of_parser.c",
                "meson_vpu_pipeline_traverse.c",
                "meson_crtc.c",
                "meson_vpu_pipeline.c",
                "meson_vpu_pipeline_private.c",
                "meson_debugfs.c",
                "meson_vpu_util.c",
                "meson_drm_bind.c",
                "meson_dummyl.c",
                "meson_dummyp.c",
                "meson_drm_rdma.c",
                "vpu-hw/meson_vpu_video_wrapper.c",
                "vpu-hw/meson_vpu_osd_mif.c",
                "vpu-hw/meson_osd_gfcd.c",
                "vpu-hw/meson_osd_afbc.c",
                "vpu-hw/meson_osd_scaler.c",
                "vpu-hw/meson_osd_proc.c",
                "vpu-hw/meson_vpu_osdblend.c",
                "vpu-hw/meson_vpu_hdr_dv.c",
                "vpu-hw/meson_vpu_postblend.c",
                "vpu-hw/meson_osd_csc.c",
                "meson_lcd.c",
                "meson_eDP.c",
            ],
        },
        "CONFIG_AMLOGIC_DRM_USE_ION": {
            True: [
                "meson_gem.c",
                "meson_fb.c",
            ],
        },
        "CONFIG_AMLOGIC_DRM_CUT_HDMI": {
            False: [
                "meson_hdmi.c",
                "meson_hdmitx_diag.c",
            ],
        },
        "CONFIG_AMLOGIC_DRM_CUT_CVBS": {
            False: [
                "meson_cvbs.c",
            ],
        },
        "CONFIG_AMLOGIC_ZAPPER_CUT": {
            False: [
                "meson_lcd.c",
                "meson_eDP.c",
            ],
        },
        "CONFIG_AMLOGIC_DRM_EMULATE_FBDEV": {
            True: ["meson_fbdev.c"],
        },
        "CONFIG_AMLOGIC_DRM_VPU": {
            True: [
                "meson_vpu.c",
            ],
        },
    },
    hdrs = [
        "//common:drivers/pci/pci.h",
    ],
    linux_includes = [
        "../media",
        ".",
        "video_processor/videodisplay",
    ],
    local_defines = [
        "pr_fmt(fmt)=\"[aml_drm]: \" fmt",
    ],
    out = "aml_drm.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/uvm:aml_uvm",
        "//common_drivers/drivers/media:aml_media",
        "//common_drivers/drivers/dvb:amlogic-dvb",
        "//common_drivers/drivers/tee:amlogic-tee",
        "//common_drivers/drivers/memory_debug:amlogic-memory-debug",
        "//common_drivers/drivers/memory_ext:page_trace",
        "//common_drivers/drivers/pwm:amlogic-pwm",
        "//common_drivers/drivers/efuse_unifykey:amlogic-efuse-unifykey",
        "//common_drivers/drivers/cpu_info:amlogic-cpuinfo",
        "//common_drivers/drivers/secmon:amlogic-secmon",
        "//common_drivers/drivers/pm:amlogic-pm",
        "//common_drivers/drivers/power:amlogic-power",
        "//common_drivers/drivers/gpio:amlogic-gpio",
        "//common_drivers/drivers/clk/meson:amlogic-clk",
        "//common_drivers/drivers/debug:amlogic-debug",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
    ],
)
