load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")
load("//common_drivers:amlogic_utils.bzl", "m_k_files")

m_k_files()

ddk_headers(
    name = "amlogic-dvb_headers",
    hdrs = glob([
        "aucpu/aml_aucpu.h",
    ]),
    visibility = ["//visibility:public"],
)

amlogic_dvb_headers_deps0 = [
    "//common_drivers/drivers/gki_tool:amlogic-gkitool",
    "//common_drivers/drivers/debug:amlogic-debug-iotrace",
    "//common_drivers/drivers/debug:amlogic-debug",
    "//common_drivers/drivers/gpio:amlogic-gpio",
    "//common_drivers/drivers/secmon:amlogic-secmon",
    "//common_drivers/drivers/cpu_info:amlogic-cpuinfo",
]
amlogic_dvb_headers_deps = [i for i in amlogic_dvb_headers_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "amlogic-dvb",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_DVB_CONFIG": {
            True: ["main.c"],
        },
        "CONFIG_AMLOGIC_DVB_EXTERN": {
            True: [
                "aml_demod_common.c",
                "aml_tuner.c",
                "aml_atvdemod.c",
                "aml_dtvdemod.c",
                "aml_tuner_ops.c",
                "aml_demod_ops.c",
                "aml_dvb_extern_driver.c",
                "aml_dvb_extern_i2c.c",
            ],
        },
        "CONFIG_AMLOGIC_AUCPU": {
            True: ["aucpu/aml_aucpu.c"],
        },
        "CONFIG_AMLOGIC_DVB_DSM": {
            True: ["dsm/aml_dsm.c"],
        },
        "CONFIG_AMLOGIC_SMARTCARD": {
            True: ["smartcard_sc2/smartcard.c"],
        },
    },
    hdrs = [
        "//common_drivers:soc_headers",
        ":amlogic-dvb_headers",
    ],
    linux_includes = [
        "../../../common/include/media",
    ],
    local_defines = ["pr_fmt(fmt)=\"[dvb]: \" fmt"],
    out = "amlogic-dvb.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = amlogic_dvb_headers_deps,
)
