load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select")

m_k_files()

ddk_headers(
    name = "amlogic-dvb_headers",
    hdrs = glob([
        "aucpu/aml_aucpu.h",
    ]),
    visibility = ["//visibility:public"],
)

ddk_module(
    name = "amlogic-dvb",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_DVB_CONFIG": {
            True: ["main.c"],
        },
        "CONFIG_AMLOGIC_DVB_EXTERN": {
            True: [
                "aml_demod_common.c",
                "aml_tuner.c",
                "aml_atvdemod.c",
                "aml_dtvdemod.c",
                "aml_tuner_ops.c",
                "aml_demod_ops.c",
                "aml_dvb_extern_driver.c",
                "aml_dvb_extern_i2c.c",
            ],
        },
        "CONFIG_AMLOGIC_AUCPU": {
            True: ["aucpu/aml_aucpu.c"],
        },
        "CONFIG_AMLOGIC_DVB_DSM": {
            True: ["dsm/aml_dsm.c"],
        },
        "CONFIG_AMLOGIC_SMARTCARD": {
            True: ["smartcard_sc2/smartcard.c"],
        },
    },
    hdrs = [
        ":amlogic-dvb_headers",
    ],
    linux_includes = [
        "../../../common/include/media",
    ],
    local_defines = [
        "pr_fmt(fmt)=\"[dvb]: \" fmt",
        #"AML_DVB_EXTERN_EN_EARLY_SUSPEND",
    ],
    out = "amlogic-dvb.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/media/dvb-core:dvb-core",
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
        "//common_drivers/drivers/gpio:amlogic-gpio",
        "//common_drivers/drivers/secmon:amlogic-secmon",
        "//common_drivers/drivers/cpu_info:amlogic-cpuinfo",
    ],
)
