load("@kleaf//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")

amlogic_dvb_ci_deps0 = [
    "//common_drivers/drivers/dvb:amlogic-dvb",
    "//common_drivers/drivers/tee:amlogic-tee",
    "//common_drivers/drivers/memory_debug:amlogic-memory-debug",
    "//common_drivers/drivers/memory_ext:page_trace",
    "//common_drivers/drivers/pwm:amlogic-pwm",
    "//common_drivers/drivers/efuse_unifykey:amlogic-efuse-unifykey",
    "//common_drivers/drivers/cpu_info:amlogic-cpuinfo",
    "//common_drivers/drivers/secmon:amlogic-secmon",
    "//common_drivers/drivers/pm:amlogic-pm",
    "//common_drivers/drivers/power:amlogic-power",
    "//common_drivers/drivers/gpio:amlogic-gpio",
    "//common_drivers/drivers/clk/meson:amlogic-clk",
    "//common_drivers/drivers/debug:amlogic-debug",
    "//common_drivers/drivers/debug:amlogic-debug-iotrace",
    "//common_drivers/drivers/gki_tool:amlogic-gkitool",
]
amlogic_dvb_ci_deps = [i for i in amlogic_dvb_ci_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "amlogic-dvb-ci",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_DVB_CI": {
            True: [
                "aml_pcmcia.c",
                "aml_ci.c",
                "aml_ci_bus.c",
                "cimcu/dvb_ca_en50221_cimcu.c",
                "cimax/dvb_ringbuffer.c",
            ],
        },
    },
    hdrs = [
        "//common_drivers:soc_headers",
        "//common:drivers/pci/controller/dwc/pcie-designware.h",
        "//common:drivers/pci/pci.h",
    ],
    linux_includes = [
        "../../../common/drivers/pci/controller/dwc",
        "../../../common/drivers/pci",
        "../../../common/include/media",
    ],
    local_defines = [
        "pr_fmt(fmt)=\"[dvb-ci]: \" fmt",
    ],
    out = "amlogic-dvb-ci.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = amlogic_dvb_ci_deps,
)
