load("@kleaf//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")

ddk_module(
    name = "amlogic-usb-cam",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_USBCAM": {
            True: [
                    "usbci.c",
            ],
        },
    },
    hdrs = [
        "//common_drivers:soc_headers",
    ],

    local_defines = [
        "pr_fmt(fmt)=\"[usb-cam]: \" fmt",
    ],
    out = "amlogic-usb-cam.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = [
    ],
)
