load("@kleaf//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")

amlogic_usb_cam_deps0 = [
]
amlogic_usb_cam_deps = [i for i in amlogic_usb_cam_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "amlogic-usb-cam",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_USBCAM": {
            True: [
                    "usbci.c",
            ],
        },
    },
    hdrs = [
        "//common_drivers:soc_headers",
    ],

    local_defines = [
        "pr_fmt(fmt)=\"[usb-cam]: \" fmt",
    ],
    out = "amlogic-usb-cam.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = amlogic_usb_cam_deps,
)
