load("@kleaf//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")

ddk_module(
    name = "amlogic-efuse-unifykey",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_EFUSE_UNIFYKEY": {
            True: ["efuse_unifykey.c"],
        },
        "CONFIG_AMLOGIC_EFUSE": {
            True: [
                "efuse.c",
                "efuse_api.c",
            ],
        },
        "CONFIG_AMLOGIC_EFUSE_BURN": {
            True: ["efuse_burn.c"],
        },
        "CONFIG_AMLOGIC_UNIFYKEY": {
            True: [
                "security_key.c",
                "unifykey.c",
                "unifykey_dts.c",
                "storage_key.c",
                "normal_key.c",
            ],
        },
        "CONFIG_AMLOGIC_DEFENDKEY": {
            True: [
                "defendkey.c",
                "securekey.c",
            ],
        },
    },
    hdrs = [
        "//common_drivers:soc_headers",
        "efuse.h",
    ],
    local_defines = ["pr_fmt(fmt)=\"[efuse-unifykey]: \" fmt"],
    out = "amlogic-efuse-unifykey.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
        "//common_drivers/drivers/secmon:amlogic-secmon",
    ],
)
