load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")
load("//common_drivers:amlogic_utils.bzl", "m_k_files")

m_k_files()

amlogic_efuse_unifykey_deps0 = [
    "//common_drivers/drivers/gki_tool:amlogic-gkitool",
    "//common_drivers/drivers/debug:amlogic-debug-iotrace",
    "//common_drivers/drivers/debug:amlogic-debug",
    "//common_drivers/drivers/secmon:amlogic-secmon",
]
amlogic_efuse_unifykey_deps = [i for i in amlogic_efuse_unifykey_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "amlogic-efuse-unifykey",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_EFUSE_UNIFYKEY": {
            True: ["efuse_unifykey.c"],
        },
        "CONFIG_AMLOGIC_EFUSE": {
            True: [
                "efuse.c",
                "efuse_api.c",
            ],
        },
        "CONFIG_AMLOGIC_EFUSE_BURN": {
            True: ["efuse_burn.c"],
        },
        "CONFIG_AMLOGIC_UNIFYKEY": {
            True: [
                "security_key.c",
                "unifykey.c",
                "unifykey_dts.c",
                "storage_key.c",
                "normal_key.c",
            ],
        },
        "CONFIG_AMLOGIC_DEFENDKEY": {
            True: [
                "defendkey.c",
                "securekey.c",
            ],
        },
    },
    hdrs = [
        "efuse.h",
    ],
    local_defines = ["pr_fmt(fmt)=\"[efuse-unifykey]: \" fmt"],
    out = "amlogic-efuse-unifykey.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = amlogic_efuse_unifykey_deps,
)
