load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")
load("//common_drivers:amlogic_utils.bzl", "m_k_files")

m_k_files()

amlogic_gkitool_deps0 = [
]
amlogic_gkitool_deps = [i for i in amlogic_gkitool_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "amlogic-gkitool",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_GKI_TOOL": {
            True: [
                "gki_module.c",
                "gki_tool.c",
            ],
        },
    },
    hdrs = [
        "//common:kernel/module/internal.h",
    ],
    linux_includes = [
        "../../../common/kernel/module",
    ],
    local_defines = ["pr_fmt(fmt)=\"[gkitool]: \" fmt"],
    out = "amlogic-gkitool.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = amlogic_gkitool_deps,
)
