load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select")

m_k_files()

ddk_module(
    name = "amlogic-gkitool",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_GKI_TOOL": {
            True: [
                "gki_module.c",
                "gki_tool.c",
            ],
        },
    },
    hdrs = [
        "//common:kernel/module/internal.h",
    ],
    linux_includes = [
        "../../../common/kernel/module",
    ],
    local_defines = ["pr_fmt(fmt)=\"[gkitool]: \" fmt"],
    out = "amlogic-gkitool.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
    ],
)
