load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select")

m_k_files()

ddk_module(
    name = "amlogic-gpio",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_GPIO": {
            True: ["main.c"],
        },
        "CONFIG_AMLOGIC_GPIOLIB": {
            True: ["gpiolib.c"],
        },
        "CONFIG_AMLOGIC_GPIOLIB_SYSFS": {
            True: ["gpiolib-sysfs.c"],
        },
        "CONFIG_AMLOGIC_MESON_IRQ_GPIO": {
            True: [
                "irqchip/irq-meson-gpio.c",
            ],
        },
        "CONFIG_AMLOGIC_PINCTRL_MESON": {
            True: [
                "pinctrl/pinctrl-meson.c",
                "pinctrl/pinctrl-meson-axg-pmx.c",
            ],
        },
        "CONFIG_AMLOGIC_GPIO_PMIC6B": {
            True: ["meson_pmic6b/pmic6b_gpio.c"],
        },
    },
    hdrs = [
        "//common:drivers/gpio/gpiolib.h",
        "//common:drivers/pinctrl/core.h",
        "//common:drivers/pinctrl/pinctrl-utils.h",
        "//common:drivers/base/regmap/internal.h",
    ],
    linux_includes = [
        "../../../common/drivers/gpio",
        "../../../common/drivers",
        "../../../common/drivers/base",
    ],
    local_defines = ["pr_fmt(fmt)=\"[gpio]: \" fmt"],
    out = "amlogic-gpio.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
    ],
)

amlogic_pinctrl_soc_deps = [
    "//common_drivers/drivers/gpio:amlogic-gpio",
    "//common_drivers/drivers/gki_tool:amlogic-gkitool"
]
ddk_module(
    name = "amlogic-pinctrl-soc-s4",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_S4": {
            True: ["pinctrl/pinctrl-meson-s4.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-s4]: \" fmt"],
    out = "amlogic-pinctrl-soc-s4.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-c2",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_C2": {
            True: ["pinctrl/pinctrl-meson-c2.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-c2]: \" fmt"],
    out = "amlogic-pinctrl-soc-c2.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-c3",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_C3": {
            True: ["pinctrl/pinctrl-meson-c3.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-c3]: \" fmt"],
    out = "amlogic-pinctrl-soc-c3.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-a1",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_A1": {
            True: ["pinctrl/pinctrl-meson-a1.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-a1]: \" fmt"],
    out = "amlogic-pinctrl-soc-a1.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-sc2",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_SC2": {
            True: ["pinctrl/pinctrl-meson-sc2.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-sc2]: \" fmt"],
    out = "amlogic-pinctrl-soc-sc2.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-t3",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_T3": {
            True: ["pinctrl/pinctrl-meson-t3.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-t3]: \" fmt"],
    out = "amlogic-pinctrl-soc-t3.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-t7",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_T7": {
            True: ["pinctrl/pinctrl-meson-t7.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-t7]: \" fmt"],
    out = "amlogic-pinctrl-soc-t7.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-t5m",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_T5M": {
            True: ["pinctrl/pinctrl-meson-t5m.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-t5m]: \" fmt"],
    out = "amlogic-pinctrl-soc-t5m.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-g12a",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_G12A": {
            True: ["pinctrl/pinctrl-meson-g12a.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-g12a]: \" fmt"],
    out = "amlogic-pinctrl-soc-g12a.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-s5",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_S5": {
            True: ["pinctrl/pinctrl-meson-s5.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-s5]: \" fmt"],
    out = "amlogic-pinctrl-soc-s5.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-t5w",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_T5W": {
            True: ["pinctrl/pinctrl-meson-t5w.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-t5w]: \" fmt"],
    out = "amlogic-pinctrl-soc-t5w.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-t3x",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_T3X": {
            True: ["pinctrl/pinctrl-meson-t3x.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-t3x]: \" fmt"],
    out = "amlogic-pinctrl-soc-t3x.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-txhd2",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_TXHD2": {
            True: ["pinctrl/pinctrl-meson-txhd2.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-txhd2]: \" fmt"],
    out = "amlogic-pinctrl-soc-txhd2.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-c1",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_C1": {
            True: ["pinctrl/pinctrl-meson-c1.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-c1]: \" fmt"],
    out = "amlogic-pinctrl-soc-c1.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-s1a",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_S1A": {
            True: ["pinctrl/pinctrl-meson-s1a.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-s1a]: \" fmt"],
    out = "amlogic-pinctrl-soc-s1a.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-t5d",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_T5D": {
            True: ["pinctrl/pinctrl-meson-t5d.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-t5d]: \" fmt"],
    out = "amlogic-pinctrl-soc-t5d.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-a4",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_A4": {
            True: ["pinctrl/pinctrl-meson-a4.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-a4]: \" fmt"],
    out = "amlogic-pinctrl-soc-a4.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-a5",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_A5": {
            True: ["pinctrl/pinctrl-meson-a5.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-a5]: \" fmt"],
    out = "amlogic-pinctrl-soc-a5.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-tm2",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_TM2": {
            True: ["pinctrl/pinctrl-meson-tm2.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-tm2]: \" fmt"],
    out = "amlogic-pinctrl-soc-tm2.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-s7",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_S7": {
            True: ["pinctrl/pinctrl-meson-s7.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-s7]: \" fmt"],
    out = "amlogic-pinctrl-soc-s7.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-s7d",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_S7D": {
            True: ["pinctrl/pinctrl-meson-s7d.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-s7d]: \" fmt"],
    out = "amlogic-pinctrl-soc-s7d.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-s6",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_S6": {
            True: ["pinctrl/pinctrl-meson-s6.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-s6]: \" fmt"],
    out = "amlogic-pinctrl-soc-s6.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

ddk_module(
    name = "amlogic-pinctrl-soc-t6d",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_PINCTRL_MESON_T6D": {
            True: ["pinctrl/pinctrl-meson-t6d.c"],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[pinctrl-soc-t6d]: \" fmt"],
    out = "amlogic-pinctrl-soc-t6d.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = amlogic_pinctrl_soc_deps,
)

