load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")
load("//common_drivers:amlogic_utils.bzl", "m_k_files")

m_k_files()

amlogic_host_deps0 = [
    "//common_drivers/drivers/gki_tool:amlogic-gkitool",
    "//common_drivers/drivers/debug:amlogic-debug-iotrace",
    "//common_drivers/drivers/debug:amlogic-debug",
    "//common_drivers/drivers/pm:amlogic-pm",
    "//common_drivers/drivers/power:amlogic-power",
]
amlogic_host_deps = [i for i in amlogic_host_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "amlogic-host",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_HOST_DRIVER": {
            True: [
                "host.c",
                "sysfs.c",
                "host_poll.c",
                "host_report.c",
            ],
        },
    },
    hdrs = [
    ],

    local_defines = [
        "pr_fmt(fmt)=\"[host]: \" fmt",
        "__module_param(name, type, perm)=",
        "__module_param_named(name, value, type, perm)=",
        "__module_param_array(name, type, nump, perm)=",
        "__module_param_cb(name, ops, arg, perm)=",
        "__module_param_array_named(name, array, type, nump, perm)=",
    ],
    out = "amlogic-host.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = amlogic_host_deps,
)
