load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select")

m_k_files()

ddk_module(
    name = "amlogic-hwspinlock",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_SECMON": {
            True: [
                "hwspinlock_bakery.c",
                "hwspinlock.c",
                "hwspinlock_main.c",
            ],
        },
    },
    hdrs = [
    ],
    local_defines = ["pr_fmt(fmt)=\"[hwspinlock]: \" fmt"],
    out = "amlogic-hwspinlock.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
    ],
)
